added header, main body,footer to html

--- a/travel-site.html
+++ b/travel-site.html
@@ -2,9 +2,17 @@
 
 
 <body>
+    <div id="body_header">
 
+    </div>
 
+    <div id="body_mainbody">
 
+    </div>
+
+    <div id="body_footer">
+        
+    </div>
 </body>
 
 
