--- a/travel-site.html
+++ b/travel-site.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html> 
 
+<header>
+    
+</header>
 
 <body>
     <div id="body_header">
+        <div id="searchbar"></div>
 
+        <div id="selection_icons">
+            <div id="icons">
+                <img src="https://a0.muscache.com/im/pictures/mediaverse/category_icon/original/3e5243c8-4d15-4c6b-97e3-7ba2bb7bb880.png" width="24" height="24">
+                <span class="font_size">Icons</span>
+            </div>
+            <div id="beachfront">
+                <img src="https://a0.muscache.com/pictures/bcd1adc0-5cee-4d7a-85ec-f6730b0f8d0c.jpg" width="24" height="24">
+                <span class="font_size">Beachfront</span>
+            </div>
+            <div id="Cabins">
+                <img src="https://a0.muscache.com/pictures/732edad8-3ae0-49a8-a451-29a8010dcc0c.jpg" width="24" height="24">
+                <span class="font_size">Cabins</span>
+            </div>
+            <div id="amazingpools">
+                <img src="https://a0.muscache.com/pictures/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" width="24" height="24">
+                <span class="font_size">Amazing pools</span>
+            </div>
+            <div id="offthegrid">
+                <img src="https://a0.muscache.com/pictures/9a2ca4df-ee90-4063-b15d-0de7e4ce210a.jpg" width="24" height="24">
+                <span class="font_size">Off-the-grid</span>
+            </div>
+        </div>
     </div>
 
-    <div id="body_mainbody">
-
-    </div>
-
-    <div id="body_footer">
-        
-    </div>
+    <div id="body_mainbody"></div>
+    <div id="body_footer"></div>
 </body>
 
 
