--- a/travel-site.html
+++ b/travel-site.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html> 
 
 <header>
-    
+    <link href='travel-site-stylesheet.css' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </header>
-
 <body>
-    <div id="body_header">
-        <div id="searchbar"></div>
-
-        <div id="selection_icons">
-            <div id="icons">
-                <img src="https://a0.muscache.com/im/pictures/mediaverse/category_icon/original/3e5243c8-4d15-4c6b-97e3-7ba2bb7bb880.png" width="24" height="24">
-                <span class="font_size">Icons</span>
-            </div>
-            <div id="beachfront">
-                <img src="https://a0.muscache.com/pictures/bcd1adc0-5cee-4d7a-85ec-f6730b0f8d0c.jpg" width="24" height="24">
-                <span class="font_size">Beachfront</span>
-            </div>
-            <div id="Cabins">
-                <img src="https://a0.muscache.com/pictures/732edad8-3ae0-49a8-a451-29a8010dcc0c.jpg" width="24" height="24">
-                <span class="font_size">Cabins</span>
-            </div>
-            <div id="amazingpools">
-                <img src="https://a0.muscache.com/pictures/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" width="24" height="24">
-                <span class="font_size">Amazing pools</span>
-            </div>
-            <div id="offthegrid">
-                <img src="https://a0.muscache.com/pictures/9a2ca4df-ee90-4063-b15d-0de7e4ce210a.jpg" width="24" height="24">
-                <span class="font_size">Off-the-grid</span>
-            </div>
+    <header class="nav_border0">
+        <div class="header_border0 margin">
+        <!--Come back after finishing the main img fix and see if the search bar width is required -->
+            <search class="search_border1">
+                    <div class="search_flex0">
+                        <img src="https://icons.veryicon.com/png/o/miscellaneous/designer-icon-1/searchbar.png" width="20" height="20">
+                        <div class="font1">Where to? <br /><span class="font2">Anywhere </span><span class="search_text">&#183;</span><span class="font2"> Any week </span><span class="search_text">&#183;</span><span class="font2"> Add guests</span>
+                        </div>
+                    </div>
+            </search>
+        <!--This is complete now-->
+            <nav class="nav_flex0">
+                <div class="nav_flex1">
+                        <img src="https://a0.muscache.com/im/pictures/mediaverse/category_icon/original/3e5243c8-4d15-4c6b-97e3-7ba2bb7bb880.png" width="24" height="24">
+                        <span class="font3">Icons</span>
+                </div>
+                <div class="nav_flex1">
+                        <img src="https://a0.muscache.com/pictures/bcd1adc0-5cee-4d7a-85ec-f6730b0f8d0c.jpg" width="24" height="24">
+                        <span class="font3">Beachfront</span>
+                </div>
+                <div class="nav_flex1">
+                        <img src="https://a0.muscache.com/pictures/732edad8-3ae0-49a8-a451-29a8010dcc0c.jpg" width="24" height="24">
+                        <span class="font3">Cabins</span>
+                </div>
+                <div class="nav_flex1">
+                        <img src="https://a0.muscache.com/pictures/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" width="24" height="24">
+                        <span class="font3">Amazing pools</span>
+                </div>
+                <div class="nav_flex1">
+                        <img src="https://a0.muscache.com/pictures/9a2ca4df-ee90-4063-b15d-0de7e4ce210a.jpg" width="24" height="24">
+                        <span class="font3">Off-the-grid</span>
+                </div>
+            </nav>
         </div>
-    </div>
 
-    <div id="body_mainbody"></div>
-    <div id="body_footer"></div>
+    </header>
+
+
 </body>
-
-
-
 </html>
