--- a/travel-site.html
+++ b/travel-site.html
@@ -7,7 +7,6 @@
 <body>
     <header class="nav_border0">
         <div class="header_border0 margin">
-        <!--Come back after finishing the main img fix and see if the search bar width is required -->
             <search class="search_border1">
                     <div class="search_flex0">
                         <img src="https://icons.veryicon.com/png/o/miscellaneous/designer-icon-1/searchbar.png" width="20" height="20">
@@ -41,6 +40,193 @@
         </div>
 
     </header>
+    <main class="spacer">
+        <div class="main_grid0 margin">
+                <div class="grid_box0">
+                    <div class="img0">  
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>  
+                <div class="font4">Make core memories with Inside Out 2</div>
+                <div class="font5">Hosted by Joy</div>
+                <div class="font8">Coming June</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img1">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Stay in Prince's Purple Rain house</div>
+                    <div class="font5">Hosted by Wendy and Lisa</div>
+                    <div class="font8">Coming August</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img2">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Go VIP with Kevin Hart</div>
+                    <div class="font5">Hosted by Kevin Hart</div>
+                    <div class="font8">Coming August</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img3">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Join a living room session with Doja</div>
+                    <div class="font5">Hosted by Doja Cat</div>
+                    <div class="font8">Coming October</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img4">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Wake up in the Musée d'Orsay</div>
+                    <div class="font5">Hosted by Mathieu Lehanneur</div>
+                    <div class="font8">Sold out</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img5">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Design your Incredibles Supersuit</div>
+                    <div class="font5">Hosted by Edna Mode</div>
+                    <div class="font8">Sold out</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img6">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Crash at the X-Mansion</div>
+                    <div class="font5">Hosted by Jubilee</div>
+                    <div class="font8">Sold out</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img7">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Live like Bollywood star Janhvi Kapoor</div>
+                    <div class="font5">Hosted by Janhvi Kapoor</div>
+                    <div class="font8">Sold out</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img8">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Go on tour with Feid</div>
+                    <div class="font5">Hosted by Feid</div>
+                    <div class="font8">Sold out</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img9">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Game with Khaby Lame</div>
+                    <div class="font5">Hosted by Khaby Lame</div>
+                    <div class="font8">Sold out</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img10">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Drift off in the Up house</div>
+                    <div class="font5">Hosted by Calr Fredricksen</div>
+                    <div class="font8">Sold out</div>
+                </div>
+        </div>
+        <div class="font6 margin">Past experiences</div>
+        <div class="main_grid0 margin">
+                <div class="grid_box0">
+                    <div class="img11">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Spend the night in the Ferrari Museum</div>
+                    <div class="font5">Hosted by Marc Gené</div>
+                    <div class="font8">Sold out</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img12">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Shrek's Swamp</div>
+                    <div class="font5">Hosted by Donkey</div>
+                    <div class="font8">Sold out</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img13">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Barbie's Malibu Dreamhouse, Ken's Way</div>
+                    <div class="font5">Hosted by Ken</div>
+                    <div class="font8">Sold out</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img14">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Ted Lasso's Favorite Pub</div>
+                    <div class="font5">Hosted by Mae</div>
+                    <div class="font8">Sold out</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img15">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Houseplant Retreat</div>
+                    <div class="font5">Hosted by Seth Rogan</div>
+                    <div class="font8">Sold out</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img16">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">Home Alone Holiday</div>
+                    <div class="font5">Hosted by Buzz</div>
+                    <div class="font8">Sold out</div>
+                </div>
+                <div class="grid_box0">
+                    <div class="img17">
+                        <div class="icon_border0">
+                            <img src="https://static-00.iconduck.com/assets.00/external-link-outline-icon-256x256-u6gjxcfp.png" width="15" height="15">
+                        </div>
+                    </div>
+                    <div class="font4">The Last Blockbuster</div>
+                    <div class="font5">Hosted by Sandi</div>
+                    <div class="font8">Sold out</div>
+                </div>
+        </div>
+    </main>
 
 
 </body>
