add footer html, add footer,main,header css

--- a/travel-site.html
+++ b/travel-site.html
@@ -227,7 +227,97 @@
                 </div>
         </div>
     </main>
+    <footer id="footer">
+        <div class="footer_inspiring footerbottomingapcing">
+            <div class="margin">
+                <h2 class="font7">Inspiration for future getaways</h2>
+                <div class="footer_nav font9">
+                    <div>Popular</div>
+                    <div>Historic</div>
+                    <div>Coastal</div>
+                    <div>Islands</div>
+                </div>
+                <div class="footer_cities">
+                    <div class="city_block">
+                        <div class="font8">Aberfeldy</div> 
+                        <div class="font11">Holiday rentals</div> 
+                    </div>
+                    <div class="city_block">
+                        <div class="font8">Amsterdam</div> 
+                        <div class="font11">Pet-friendly rentals</div> 
+                    </div>
+                    <div class="city_block">
+                        <div class="font8">Athens</div> 
+                        <div class="font11">Flat rentals</div> 
+                    </div>
+                    <div class="city_block">
+                        <div class="font8">Aviemore</div> 
+                        <div class="font11">Chalet rentals</div> 
+                    </div>
+                    <div class="city_block">
+                        <div class="font8">Bakewell</div> 
+                        <div class="font11">House rentals</div> 
+                    </div>
+                    <div class="city_block">
+                        <div class="font8">Barcelona</div> 
+                        <div class="font11">Flat rentals</div> 
+                    </div>
+                    <div class="city_block">
+                        <div class="font8">Bath</div> 
+                        <div class="font11">Cabin rentals</div> 
+                    </div>
 
-
+                </div>  
+            </div>
+        </div>
+        <div class="support grid margin">
+                <div class="footer_support footer_inspiring">
+                    <div class="font8 supportspacing">Support</div>
+                    <div class="font12 footerspacing">Help centre</div>
+                    <div class="font12 footerspacing">AirCover</div>
+                    <div class="font12 footerspacing">Anti Discrimination</div>
+                    <div class="font12 footerspacing">Disability support</div>
+                    <div class="font12 footerspacing">Cancellation otions</div>
+                    <div class="font12 footerbottomspacing">Report neighbourhood concern</div>
+                </div>
+                <div class="footer_support footer_inspiring">
+                    <div class="font8 supportspacing">Hosting</div>
+                    <div class="font12 footerspacing">Airbnb your home</div>
+                    <div class="font12 footerspacing">AirCover for Hosts</div>
+                    <div class="font12 footerspacing">Hosting resources</div>
+                    <div class="font12 footerspacing">Community forum</div>
+                    <div class="font12 footerspacing">Hosting responsibly</div>
+                    <div class="font12 footerbottomspacing">Join a free Hosting class</div>
+                </div>
+                <div class="footer_support footer_inspiring">
+                    <div class="font8 supportspacing">Airbnb</div>
+                    <div class="font12 footerspacing">Newsroom</div>
+                    <div class="font12 footerspacing">New features</div>
+                    <div class="font12 footerspacing">Careers</div>
+                    <div class="font12 footerspacing">Investors</div>
+                    <div class="font12 footerspacing">Gift cards</div>
+                    <div class="font12 footerbottomspacing">Airbnb.org emergency stays</div>
+                </div>
+        </div>
+        <div class="footer_notes margin">
+            <div class="footer_icons iconspacing">
+                <div>
+                    <img src="SCR-20240608-pcqn.png" width="14" height="14"> 
+                    <span class="font8">English (GB)</span>
+                </div>
+                &ensp; &emsp;
+                <div class="font8">£ GBP</div>
+                <img src="SCR-20240608-pate.png" width="14" height="14" class="fb">
+                <img src="SCR-20240608-pbaf.png" width="14" height="14" id="twitter">
+                <img src="insta.png" width="14" height="14" id="insta">
+            </div>
+            <div class="font12 icontextspacing">
+            &#169 2024 Airbnb, Inc.
+            </div>
+            <div class="font12 icontextspacing">
+            Privacy &ensp;<span>&#183;</span> &ensp; Terms &ensp; <span>&#183;</span> &ensp; Sitemap &ensp; <span>&#183;</span> &ensp; UK Modern Slavery Act &ensp; <span>&#183;</span> &ensp; Company details
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
