add css comment, remove css empty spaces

--- a/travel-site.html
+++ b/travel-site.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html> 
-
 <header>
     <link href='travel-site-stylesheet.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -227,7 +226,7 @@
                 </div>
         </div>
     </main>
-    <footer id="footer">
+    <footer class="footer">
         <div class="footer_inspiring footerbottomingapcing">
             <div class="margin">
                 <h2 class="font7">Inspiration for future getaways</h2>
@@ -307,9 +306,6 @@
                 </div>
                 &ensp; &emsp;
                 <div class="font8">£ GBP</div>
-                <img src="SCR-20240608-pate.png" width="14" height="14" class="fb">
-                <img src="SCR-20240608-pbaf.png" width="14" height="14" id="twitter">
-                <img src="insta.png" width="14" height="14" id="insta">
             </div>
             <div class="font12 icontextspacing">
             &#169 2024 Airbnb, Inc.
